<resources>
    <string name="app_name">膜蛤</string>
    <string name="text1">1926年08月17日</string>
    <string name="text2">+1s</string>
    <string name="text">👓</string>
    <string name="button">开始续命！</string>
    <string name="button2">代三个表</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
