<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#D1EEEE"
    android:keepScreenOn="true"
    android:layout_weight="1"
    tools:context=".MainActivity">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableRow
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/text1"
            android:textSize="17sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:text="@string/text2"
            android:textSize="17sp" />
    <TextClock
    android:layout_width="wrap_content"
    android:format24Hour="yyyy-MM-dd hh:mm:ss"
    android:textSize="17sp"
    android:layout_weight="1"
        android:fontFamily="sans-serif-light"/>
    </TableRow>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="342dp"
        android:gravity="center_horizontal"
        android:text="@string/text"
        android:textSize="160sp" />
</TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/button"

        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/button2"
        android:textSize="25sp" />




</LinearLayout>